fix code overlap when in responsive narrow width view
BUG=skia:3750

Review URL: https://codereview.chromium.org/1093223005

--- a/webtry/res/css/webtry.css
+++ b/webtry/res/css/webtry.css
@@ -201,6 +201,8 @@ code {
 .CodeMirror {
   border: solid gray 1px;
   height: auto !important;
+
+  z-index: 0;
 }
 
 /* Make the code editor automatically resize */
